Fixed the searchbar stretching beyond the scope of the element

--- a/src/components/SearchableFieldTable/SearchableFieldTable.css
+++ b/src/components/SearchableFieldTable/SearchableFieldTable.css
@@ -4,6 +4,7 @@
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 12px;
+    box-sizing: border-box;
     border-width: 0px;
     outline: none;
     background-color: var(--main-color);
